force-app/main/default/objects/RandomUserAPI_Config__mdt/RandomUserAPI_Config__mdt.object-meta.xml
<CustomObject>
    <description>RandomUserAPI Configs for storing API details</description>
    <label>RandomUserAPI Config</label>
    <pluralLabel>RandomUserAPI Configs</pluralLabel>
</CustomObject>