force-app/main/default/objects/RandomUserAPI_Config__mdt/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>API_Endpoint to store API Endpoints</description>
    <label>API Endpoint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>