force-app/main/default/objects/RandomUserAPI_Config__mdt/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <description>Http_Method to store API details&apos; http method</description>
    <label>Http Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>