force-app/main/default/objects/RandomUserAPI_Config__mdt/fields/Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Ms__c</fullName>
    <description>Timeout_Ms for Http Timeout</description>
    <label>Timeout Ms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>